--- a/manifest.yml
+++ b/manifest.yml
@@ -7,4 +7,4 @@ applications:
   env:
     WELCOME_MESSAGE: Hello from the review environment
   services:
-    tracker-database
+  - tracker-database
